# FinalProject

./: FinalProject.cabal  README.md  contact.txt  proposal.txt
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: EnergyBalance.hs  Output.hs  ParameterSweep.hs  RadiativeTransfer.hs  Spectrum.hs  Types.hs
