cabal-version:      3.0
name:               FinalProject
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- author:
maintainer:         alextuson80@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable FinalProject
    import:           warnings
    main-is:          Main.hs

    hs-source-dirs:
        app
        src

    other-modules:
        Types
        Spectrum
        RadiativeTransfer
        EnergyBalance
        ParameterSweep
        Output

    build-depends:
        base ^>=4.18.3.0

    default-language: Haskell2010
